[package]
name = "wechat_notifier"
version = "0.1.0"
edition = "2021"

[dependencies]
winapi = { version = "0.3", features = ["winuser", "libloaderapi", "combaseapi", "shellapi", "winreg"] }

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_System_Com",
    "UI_Notifications",
    "Data_Xml_Dom",
]

# 【编译优化】让体积最小化
[profile.release]
opt-level = "z"     # 优化体积
lto = true          # 链接时优化
codegen-units = 1   # 降低并行度换取更优代码
panic = "abort"     # 移除堆栈回溯信息
strip = true        # 移除符号表